--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {},
   "scripts": {
