--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
