--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
